0001460: Make application logo configurable